change ropensci/ropenscilabs stuff to sckott

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
         when they change their URL structure (and publishers change URL stucture <strong>A LOT</strong>).
         Checkout <a href="https://gist.github.com/sckott/7a82fda529f5c2fd63d661c36f47e5d7">my brief analysis</a>.<br><br>
 
-        This API builds on work at <a href="https://github.com/ropenscilabs/pubpatterns">https://github.com/ropenscilabs/pubpatterns</a> - which is simply rules for building URLs. The idea here is that we can crowd source the best knowledgee on correct URL patterns to full text versions of articles on a per publisher basis, either by crossref member number, or by DOI prefix. If there's publishers that aren't included, <a href="https://github.com/ropenscilabs/pubpatterns/pulls">send a PR</a>. <br><br>
+        This API builds on work at <a href="https://github.com/sckott/pubpatterns">https://github.com/sckott/pubpatterns</a> - which is simply rules for building URLs. The idea here is that we can crowd source the best knowledgee on correct URL patterns to full text versions of articles on a per publisher basis, either by crossref member number, or by DOI prefix. If there's publishers that aren't included, <a href="https://github.com/sckott/pubpatterns/pulls">send a PR</a>. <br><br>
 
-        source code for the API is at <a href="https://github.com/ropenscilabs/pubpatternsapi">https://github.com/ropenscilabs/pubpatternsapi</a><br><br>
+        source code for the API is at <a href="https://github.com/sckott/pubpatternsapi">https://github.com/sckott/pubpatternsapi</a><br><br>
         </p>
         <center><a class="btn btn-lg btn-primary" href="docs.html" role="button">API docs &raquo;</a></center>
       </div>
